@@ -4,6 +4,7 @@ TMW.CHANGELOG_LASTVER="6.2.6"
 
 TMW.CHANGELOG = [==[
 ===v8.4.3===
+* Updates for Allied Races.
 * Minor options UI improvements.
 * Added options to disable TMW's built-in settings backup and the "backup" import source.
 
