@@ -1,22 +1,18 @@
 {
-	61,	--Dalaran Jewelcrafter\'s Token
-	81,	--Epicurean\'s Award
-	241,	--Champion\'s Seal
-	361,	--Illustrious Jewelcrafter\'s Token
+	61,	--Dalaran Jewelcrafter's Token
+	81,	--Epicurean's Award
+	241,	--Champion's Seal
+	361,	--Illustrious Jewelcrafter's Token
 	384,	--Dwarf Archaeology Fragment
 	385,	--Troll Archaeology Fragment
-	390,	--Conquest Points
 	391,	--Tol Barad Commendation
-	392,	--Honor Points
 	393,	--Fossil Archaeology Fragment
 	394,	--Night Elf Archaeology Fragment
-	395,	--Justice Points
-	396,	--Valor Points
 	397,	--Orc Archaeology Fragment
 	398,	--Draenei Archaeology Fragment
 	399,	--Vrykul Archaeology Fragment
 	400,	--Nerubian Archaeology Fragment
-	401,	--Tol\'vir Archaeology Fragment
+	401,	--Tol'vir Archaeology Fragment
 	402,	--Ironpaw Token
 	416,	--Mark of the World Tree
 	515,	--Darkmoon Prize Ticket
@@ -31,14 +27,11 @@
 	776,	--Warforged Seal
 	777,	--Timeless Coin
 	789,	--Bloody Coin
-	810,	--Black Iron Fragment
 	821,	--Draenor Clans Archaeology Fragment
 	823,	--Apexis Crystal
 	824,	--Garrison Resources
 	828,	--Ogre Archaeology Fragment
 	829,	--Arakkoa Archaeology Fragment
-	830,	--n/a
-	897,	--UNUSED
 	910,	--Secret of Draenor Alchemy
 	944,	--Artifact Fragment
 	980,	--Dingy Iron Coins
@@ -47,4 +40,37 @@
 	1008,	--Secret of Draenor Jewelcrafting
 	1017,	--Secret of Draenor Leatherworking
 	1020,	--Secret of Draenor Blacksmithing
+	1101,	--Oil
+	1129,	--Seal of Inevitable Fate
+	1149,	--Sightless Eye
+	1154,	--Shadowy Coins
+	1155,	--Ancient Mana
+	1166,	--Timewarped Badge
+	1171,	--Artifact Knowledge
+	1172,	--Highborne Archaeology Fragment
+	1173,	--Highmountain Tauren Archaeology Fragment
+	1174,	--Demonic Archaeology Fragment
+	1191,	--Valor
+	1220,	--Order Resources
+	1226,	--Nethershard
+	1268,	--Timeworn Artifact
+	1273,	--Seal of Broken Fate
+	1275,	--Curious Coin
+	1299,	--Brawler's Gold
+	1314,	--Lingering Soul Fragment
+	1324,	--Horde Qiraji Commendation
+	1325,	--Alliance Qiraji Commendation
+	1342,	--Legionfall War Supplies
+	1347,	--Legionfall Building - Personal Tracker - Mage Tower (Hidden)
+	1349,	--Legionfall Building - Personal Tracker - Command Tower (Hidden)
+	1350,	--Legionfall Building - Personal Tracker - Nether Tower (Hidden)
+	1355,	--Felessence
+	1356,	--Echoes of Battle
+	1357,	--Echoes of Domination
+	1379,	--Trial of Style Token
+	1416,	--Coins of Air
+	1501,	--Writhing Essence
+	1506,	--Argus Waystone
+	1508,	--Veiled Argunite
+	1533,	--Wakening Essence
 }
