@@ -1,4 +1,5 @@
 ===v8.4.3===
+* Updates for Allied Races.
 * Minor options UI improvements.
 * Added options to disable TMW's built-in settings backup and the "backup" import source.
 
